# aicost

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  generate_demo.py  pyproject.toml  server.json  skills-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pricing_update.md
.github/workflows/: price_sync.yml  publish.yml
aicost/: __init__.py  calculator.py  cli.py  currency.py  mcp_server.py  recommender.py
data/: pricing.json
scripts/: automate_pricing.py
skills/aicost/: SKILL.md
