[project]
name = "aicost"
version = "0.1.0"
description = "Terminal-based AI API Cost Calculator, Converter & Recommender"
authors = [
    { name = "Ufuk Aydin", email = "info@ufukaydin.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "requests>=2.32.3"
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
aicost = "aicost.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
